--- a/earbuds-story.html
+++ b/earbuds-story.html
@@ -3,99 +3,78 @@
 <head>
   <meta charset="utf-8" />
   <title>Best Wireless Earbuds Under ₹1000 — XizoaHub</title>
-
-  <link rel="canonical" href="https://xizoa.com/earbuds-story.html" />
+  <link rel="canonical" href="https://xizoa.com/p/earbuds-story.html" />
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <meta name="description" content="Top budget wireless earbuds under ₹1000 — quick review, pros & cons, battery & bass.">
-  
+  <meta name="description" content="Discover the best earbuds under ₹1000 — short story with visuals, battery life & sound test.">
+
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-story"
-    src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
+  <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
 
   <style amp-boilerplate>
     body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
-    -moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
-    -ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
     animation:-amp-start 8s steps(1,end) 0s 1 normal both}
     @-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-    @-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-    @-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-    @-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
     @keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
   </style>
   <noscript>
-    <style amp-boilerplate>
-      body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
-    </style>
+    <style amp-boilerplate>body{animation:none}</style>
   </noscript>
 
   <style amp-custom>
-    :root{--bg:#0f1720;--accent:#d32f2f;--text:#ffffff}
-    body{font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin:0}
-    .credit{position:absolute; bottom:18px; left:18px; font-size:14px; color:rgba(255,255,255,0.9)}
+    :root { --red:#d32f2f; --white:#fff; --shadow:rgba(0,0,0,0.4); }
+    body{font-family:sans-serif; margin:0}
+    h1,h2,p{margin:0;color:var(--white);text-shadow:0 2px 6px var(--shadow);}
   </style>
 </head>
 
 <body>
   <amp-story standalone
-    title="Best Wireless Earbuds Under ₹1000"
+    title="Best Earbuds Under ₹1000"
     publisher="XizoaHub"
-    publisher-logo-src="https://xizoa.com/assets/publisher-logo.png"
+    publisher-logo-src="https://xizoa.com/assets/logo.png"
     poster-portrait-src="https://xizoa.com/assets/poster.jpg">
 
-    <!-- Page 1: Cover -->
+    <!-- Slide 1 -->
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
-        <amp-img src="https://xizoa.com/assets/earbuds-cover.jpg" width="720" height="1280" layout="responsive" alt="Earbuds Cover"></amp-img>
+        <amp-img src="https://xizoa.com/assets/cover.jpg" width="720" height="1280" layout="responsive"></amp-img>
       </amp-story-grid-layer>
-
-      <amp-story-grid-layer template="vertical" style="padding:32px;">
-        <h1 style="font-size:36px; margin:0; color:var(--text)">Best Wireless Earbuds Under ₹1000</h1>
-        <p style="font-size:16px; color:rgba(255,255,255,0.9); margin-top:8px">2025 quick review — battery, bass & value.</p>
-        <div class="credit">XizoaHub • Visual Stories</div>
+      <amp-story-grid-layer template="vertical" style="padding:32px">
+        <h1>Best Earbuds under ₹1000</h1>
+        <p>Quick visual review – 2025 edition</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
-    <!-- Page 2: Highlight -->
-    <amp-story-page id="highlights">
+    <!-- Slide 2 -->
+    <amp-story-page id="slide2">
       <amp-story-grid-layer template="fill">
-        <amp-img src="https://xizoa.com/assets/img1.jpg" width="720" height="1280" layout="responsive" alt="Earbuds image 1"></amp-img>
+        <amp-img src="https://xizoa.com/assets/img1.jpg" width="720" height="1280" layout="responsive"></amp-img>
       </amp-story-grid-layer>
-
-      <amp-story-grid-layer template="vertical" style="padding:28px;">
-        <h2 style="margin:0; font-size:24px; color:#fff">Top Pick: Brand X</h2>
-        <p style="font-size:15px; margin-top:8px; color:rgba(255,255,255,0.95)">Strong bass, 20H battery, mic okay for calls.</p>
+      <amp-story-grid-layer template="vertical" style="padding:32px">
+        <h2>1️⃣ Boat Airdopes 121v2</h2>
+        <p>Super bass, 20H battery, budget king.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
-    <!-- Page 3: Specs -->
-    <amp-story-page id="specs">
+    <!-- Slide 3 -->
+    <amp-story-page id="slide3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="https://xizoa.com/assets/img2.jpg" width="720" height="1280" layout="responsive" alt="specs image"></amp-img>
+        <amp-img src="https://xizoa.com/assets/img2.jpg" width="720" height="1280" layout="responsive"></amp-img>
       </amp-story-grid-layer>
-
-      <amp-story-grid-layer template="vertical" style="padding:28px;">
-        <h3 style="margin:0; font-size:20px; color:#fff">Quick Specs</h3>
-        <ul style="color:rgba(255,255,255,0.95); font-size:15px; padding-left:18px; margin-top:8px">
-          <li>Battery: 20 hours (case included)</li>
-          <li>Connectivity: Bluetooth 5.2</li>
-          <li>Warranty: 1 year</li>
-        </ul>
+      <amp-story-grid-layer template="vertical" style="padding:32px">
+        <h2>2️⃣ Noise Buds VS102</h2>
+        <p>Powerful sound + stylish design.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
-    <!-- Page 4: CTA / Link back -->
+    <!-- Slide 4 -->
     <amp-story-page id="cta">
       <amp-story-grid-layer template="fill">
-        <amp-img src="https://xizoa.com/assets/img3.jpg" width="720" height="1280" layout="responsive" alt="buy image"></amp-img>
+        <amp-img src="https://xizoa.com/assets/end.jpg" width="720" height="1280" layout="responsive"></amp-img>
       </amp-story-grid-layer>
-
-      <amp-story-grid-layer template="vertical" style="padding:28px;">
-        <h2 style="margin:0; font-size:22px; color:#fff">Full Review on Site</h2>
-        <p style="color:rgba(255,255,255,0.95); margin-top:8px">Read detailed review, price links & alternatives.</p>
-
-        <!-- CTA: use anchor to site (AMP allows normal anchor) -->
-        <a href="https://xizoa.com/earbuds-review" style="display:inline-block; padding:12px 18px; margin-top:14px; background:var(--accent); color:#fff; text-decoration:none; border-radius:8px; font-weight:600">Read Full Review</a>
+      <amp-story-grid-layer template="vertical" style="padding:32px">
+        <h2>Want more gadget stories?</h2>
+        <a href="https://xizoa.com" style="display:inline-block;background:var(--red);color:#fff;padding:12px 20px;border-radius:8px;text-decoration:none;margin-top:10px;">Visit XizoaHub</a>
       </amp-story-grid-layer>
     </amp-story-page>
 
