--- a/index.html
+++ b/index.html
@@ -144,7 +144,14 @@
     </div>
 
 </div>
-
+<div class="card">
+    <img src="https://xizoa.com/assets/smartwatch.jpg" alt="">
+    <div class="content">
+        <div class="tag">Wearables</div>
+        <div class="title">Top 3 Smartwatches (2025)</div>
+        <a href="smartwatch-story.html" class="btn">Watch Story ▶</a>
+    </div>
+</div>
 <footer>
     © 2025 XizoaHub • Web Stories Platform  
 </footer>
