--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
     </div>
 
-</div>
+<!-- Story 4 – Coming Soon -->
 <div class="card">
     <img src="https://xizoa.com/assets/smartwatch.jpg" alt="">
     <div class="content">
@@ -151,7 +151,7 @@
         <div class="title">Top 3 Smartwatches (2025)</div>
         <a href="smartwatch-story.html" class="btn">Watch Story ▶</a>
     </div>
-</div>
+
 <footer>
     © 2025 XizoaHub • Web Stories Platform  
 </footer>
