--- a/index.html
+++ b/index.html
@@ -1,160 +1,261 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>XizoaHub Stories – Web Stories</title>
+    <meta name="description" content="XizoaHub Stories — Visual micro-stories and coming soon slots." />
 
     <style>
-        body {
-            margin: 0;
-            font-family: system-ui, sans-serif;
-            background: #0d0d0d;
-            color: #fff;
+        :root{
+            --bg:#0d0d0d;
+            --card:#121212;
+            --muted:#6f6f6f;
+            --accent:#d32f2f;
+            --btn-disabled:#555;
+            --radius:12px;
+            --gap:20px;
+            --max-width:1200px;
         }
 
-        header {
-            padding: 20px;
-            font-size: 24px;
-            font-weight: 700;
-            text-align: center;
-            background: #111;
-            border-bottom: 1px solid #222;
-        }
+        *{box-sizing:border-box}
+        html,body{height:100%;margin:0;background:var(--bg);color:#fff;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial}
+        header{padding:20px 16px;text-align:center;font-weight:700;font-size:20px;background:#0b0b0b;border-bottom:1px solid #161616;position:sticky;top:0;z-index:5}
+        header span{color:var(--accent)}
+        .wrap{max-width:var(--max-width);margin:18px auto;padding:0 16px}
 
-        header span {
-            color: #d32f2f;
+        /* Responsive grid: 1 column mobile, 2 small, 3 medium, 4 large */
+        .container{
+            display:grid;
+            grid-template-columns:repeat(1,1fr);
+            gap:var(--gap);
         }
+        @media (min-width:520px){ .container{grid-template-columns:repeat(2,1fr);} }
+        @media (min-width:880px){ .container{grid-template-columns:repeat(3,1fr);} }
+        @media (min-width:1200px){ .container{grid-template-columns:repeat(4,1fr);} }
 
-        .container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 25px;
-            padding: 25px;
+        .card{
+            background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.06));
+            border-radius:var(--radius);
+            overflow:hidden;
+            display:flex;
+            flex-direction:column;
+            box-shadow:0 4px 14px rgba(0,0,0,0.45);
+            transition:transform .18s ease, box-shadow .18s ease;
         }
+        .card:focus-within,
+        .card:hover{ transform:translateY(-6px); box-shadow:0 10px 30px rgba(0,0,0,0.55); }
 
-        .card {
-            background: #1a1a1a;
-            border-radius: 14px;
-            overflow: hidden;
-            box-shadow: 0 0 15px rgba(0,0,0,0.45);
-            transition: 0.3s;
+        /* Use aspect-ratio for consistent image sizing (fast, modern) */
+        .media{
+            width:100%;
+            aspect-ratio: 9 / 16; /* tall story card */
+            background:#111;
+            display:block;
+            position:relative;
+            overflow:hidden;
         }
+        .media img{
+            width:100%;
+            height:100%;
+            object-fit:cover;
+            display:block;
+        }
+        .content{ padding:14px; display:flex;flex-direction:column; gap:8px; flex:1; }
+        .tag{ font-size:12px; background:#171717; padding:6px 10px; border-radius:8px; color:var(--accent); font-weight:700; display:inline-block; width:max-content; }
+        .title{ font-size:16px; font-weight:800; margin:0; line-height:1.2; color:#fff; }
+        .meta{ font-size:13px; color:var(--muted); margin-top:4px; }
 
-        .card:hover {
-            transform: translateY(-6px);
+        .actions{ margin-top:auto; display:flex; gap:10px; align-items:center; }
+        .btn{
+            display:inline-block;
+            text-decoration:none;
+            padding:10px 12px;
+            border-radius:10px;
+            font-weight:700;
+            text-align:center;
+            min-width:120px;
         }
+        .btn-primary{ background:var(--accent); color:#fff; }
+        .btn-disabled{ background:var(--btn-disabled); color:#ddd; cursor:default; }
 
-        .card img {
-            width: 100%;
-            height: 420px;
-            object-fit: cover;
-        }
-
-        .content {
-            padding: 16px;
-        }
-
-        .tag {
-            font-size: 12px;
-            background: #2c2c2c;
-            padding: 5px 10px;
-            border-radius: 6px;
-            display: inline-block;
-            margin-bottom: 8px;
-            color: #d32f2f;
-            font-weight: 600;
-        }
-
-        .title {
-            font-size: 18px;
-            font-weight: 700;
-            margin: 0 0 10px;
-        }
-
-        .btn {
-            display: block;
-            text-decoration: none;
-            background: #d32f2f;
-            text-align: center;
-            padding: 10px 0;
-            border-radius: 8px;
-            margin-top: 12px;
-            color: #fff;
-            font-weight: 600;
-        }
-
-        footer {
-            padding: 25px;
-            text-align: center;
-            font-size: 14px;
-            color: #777;
-            margin-top: 20px;
-            border-top: 1px solid #222;
-        }
+        footer{ color:var(--muted); text-align:center; padding:18px 8px; font-size:13px; margin:28px 0 60px 0; border-top:1px solid #161616; }
+        /* small helpers */
+        .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
     </style>
 </head>
-
 <body>
+<header class="site-header">Xizoa<span>Hub</span> Stories</header>
 
-<header>
-    Xizoa<span>Hub</span> Stories
-</header>
+<main class="wrap">
+    <section class="container" aria-label="XizoaHub Stories grid">
 
-<div class="container">
+        <!-- Story 1 – Active (unchanged as requested) -->
+        <article class="card" aria-labelledby="story-1-title">
+            <a href="earbuds-story.html" title="Best Earbuds under ₹1000" style="color:inherit;text-decoration:none;">
+                <div class="media" aria-hidden="true">
+                    <img src="https://xizoa.com/assets/cover.jpg" alt="Best Earbuds under ₹1000 cover" loading="lazy">
+                </div>
+                <div class="content">
+                    <div class="tag">Gadgets</div>
+                    <h3 id="story-1-title" class="title">Best Earbuds under ₹1000 (Visual Story)</h3>
+                    <div class="meta">Duration: 00:45 • Visual guide</div>
+                    <div class="actions">
+                        <span class="btn btn-primary" role="button" aria-label="Watch Story">Watch Story ▶</span>
+                    </div>
+                </div>
+            </a>
+        </article>
 
-    <!-- Story 1 – Active -->
-    <div class="card">
-        <img src="https://xizoa.com/assets/cover.jpg" alt="">
-        <div class="content">
-            <div class="tag">Gadgets</div>
-            <div class="title">Best Earbuds under ₹1000 (Visual Story)</div>
-            <a href="earbuds-story.html" class="btn">Watch Story ▶</a>
-        </div>
-    </div>
+        <!-- Story 2 – Coming Soon -->
+        <article class="card" aria-labelledby="story-2-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Mobiles</div>
+                <h3 id="story-2-title" class="title">Best Smartphones under ₹15000 (2025)</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
 
-    <!-- Story 2 – Coming Soon -->
-    <div class="card">
-        <img src="https://via.placeholder.com/300x500/111111/ffffff?text=Coming+Soon" alt="">
-        <div class="content">
-            <div class="tag">Mobiles</div>
-            <div class="title">Best Smartphones under ₹15000 (2025)</div>
-            <a class="btn" style="background:#555;">Coming Soon</a>
-        </div>
-    </div>
+        <!-- Story 3 – Coming Soon -->
+        <article class="card" aria-labelledby="story-3-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Gaming</div>
+                <h3 id="story-3-title" class="title">Top 5 Gaming Phones under ₹20000</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
 
-    <!-- Story 3 – Coming Soon -->
-    <div class="card">
-        <img src="https://via.placeholder.com/300x500/111111/ffffff?text=Gaming+Phones" alt="">
-        <div class="content">
-            <div class="tag">Gaming</div>
-            <div class="title">Top 5 Gaming Phones under ₹20000</div>
-            <a class="btn" style="background:#555;">Coming Soon</a>
-        </div>
-    </div>
+        <!-- Story 4 – Coming Soon -->
+        <article class="card" aria-labelledby="story-4-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Tech News</div>
+                <h3 id="story-4-title" class="title">Top Tech News Highlights (2025)</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
 
-    <!-- Story 4 – Coming Soon -->
-    <div class="card">
-        <img src="https://via.placeholder.com/300x500/111111/ffffff?text=Tech+News" alt="">
-        <div class="content">
-            <div class="tag">Tech News</div>
-            <div class="title">Top Tech News Highlights (2025)</div>
-            <a class="btn" style="background:#555;">Coming Soon</a>
-        </div>
-    </div>
+        <!-- Story 5 – Coming Soon -->
+        <article class="card" aria-labelledby="story-5-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Life</div>
+                <h3 id="story-5-title" class="title">Productivity Hacks: 60-Second Tips</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
 
-<!-- Story 4 – Coming Soon -->
-<div class="card">
-    <img src="https://xizoa.com/assets/smartwatch.jpg" alt="">
-    <div class="content">
-        <div class="tag">Wearables</div>
-        <div class="title">Top 3 Smartwatches (2025)</div>
-        <a href="smartwatch-story.html" class="btn">Watch Story ▶</a>
-    </div>
+        <!-- Story 6 – Coming Soon -->
+        <article class="card" aria-labelledby="story-6-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Tutorial</div>
+                <h3 id="story-6-title" class="title">Quick Camera Tips for Phone Photographers</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
 
-<footer>
-    © 2025 XizoaHub • Web Stories Platform  
-</footer>
+        <!-- Story 7 – Coming Soon -->
+        <article class="card" aria-labelledby="story-7-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Entertainment</div>
+                <h3 id="story-7-title" class="title">Top Trending Shows: Bite-Sized Picks</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
 
+        <!-- Story 8 – Coming Soon -->
+        <article class="card" aria-labelledby="story-8-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">How-To</div>
+                <h3 id="story-8-title" class="title">Make a Simple Budget in 60s</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
+
+        <!-- Story 9 – Coming Soon -->
+        <article class="card" aria-labelledby="story-9-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Music</div>
+                <h3 id="story-9-title" class="title">Top Guitar Riffs You Should Know</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
+
+        <!-- Story 10 – Coming Soon -->
+        <article class="card" aria-labelledby="story-10-title">
+            <div class="media" aria-hidden="true">
+                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+            </div>
+            <div class="content">
+                <div class="tag">Deals</div>
+                <h3 id="story-10-title" class="title">Weekly Deals Roundup</h3>
+                <div class="meta">Slot reserved • Publish: Coming Soon</div>
+                <div class="actions">
+                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
+                </div>
+            </div>
+        </article>
+
+    </section>
+</main>
+
+<footer>© <span id="year">2025</span> XizoaHub • Web Stories Platform</footer>
+
+<script>
+    // Small progressive enhancement: set current year, avoid broken image icon flashing
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Prevent focus outline removal for keyboard users — keep accessibility
+    (function(){document.addEventListener('keydown', function(e){if(e.key==='Tab') document.documentElement.classList.add('show-focus');});})();
+
+    // If you later create a new file for a story, replace href for the active card (earbuds-story.html)
+    // or update the "href" attributes set to "11111111" when you have the real URL/name.
+</script>
 </body>
 </html>
