--- a/index.html
+++ b/index.html
@@ -1,261 +1,88 @@
-<!DOCTYPE html>
-<html lang="hi">
+<!doctype html>
+<html amp lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>XizoaHub Stories – Web Stories</title>
-    <meta name="description" content="XizoaHub Stories — Visual micro-stories and coming soon slots." />
+  <meta charset="utf-8" />
+  <title>Xizoa Story</title>
+  <link rel="canonical" href="https://story.xizoa.com/" />
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
 
-    <style>
-        :root{
-            --bg:#0d0d0d;
-            --card:#121212;
-            --muted:#6f6f6f;
-            --accent:#d32f2f;
-            --btn-disabled:#555;
-            --radius:12px;
-            --gap:20px;
-            --max-width:1200px;
-        }
+  <!-- Auto Redirect -->
+  <meta http-equiv="refresh" content="0; url=/" />
 
-        *{box-sizing:border-box}
-        html,body{height:100%;margin:0;background:var(--bg);color:#fff;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial}
-        header{padding:20px 16px;text-align:center;font-weight:700;font-size:20px;background:#0b0b0b;border-bottom:1px solid #161616;position:sticky;top:0;z-index:5}
-        header span{color:var(--accent)}
-        .wrap{max-width:var(--max-width);margin:18px auto;padding:0 16px}
+  <!-- AMP Scripts -->
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-story"
+    src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
 
-        /* Responsive grid: 1 column mobile, 2 small, 3 medium, 4 large */
-        .container{
-            display:grid;
-            grid-template-columns:repeat(1,1fr);
-            gap:var(--gap);
-        }
-        @media (min-width:520px){ .container{grid-template-columns:repeat(2,1fr);} }
-        @media (min-width:880px){ .container{grid-template-columns:repeat(3,1fr);} }
-        @media (min-width:1200px){ .container{grid-template-columns:repeat(4,1fr);} }
-
-        .card{
-            background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.06));
-            border-radius:var(--radius);
-            overflow:hidden;
-            display:flex;
-            flex-direction:column;
-            box-shadow:0 4px 14px rgba(0,0,0,0.45);
-            transition:transform .18s ease, box-shadow .18s ease;
-        }
-        .card:focus-within,
-        .card:hover{ transform:translateY(-6px); box-shadow:0 10px 30px rgba(0,0,0,0.55); }
-
-        /* Use aspect-ratio for consistent image sizing (fast, modern) */
-        .media{
-            width:100%;
-            aspect-ratio: 9 / 16; /* tall story card */
-            background:#111;
-            display:block;
-            position:relative;
-            overflow:hidden;
-        }
-        .media img{
-            width:100%;
-            height:100%;
-            object-fit:cover;
-            display:block;
-        }
-        .content{ padding:14px; display:flex;flex-direction:column; gap:8px; flex:1; }
-        .tag{ font-size:12px; background:#171717; padding:6px 10px; border-radius:8px; color:var(--accent); font-weight:700; display:inline-block; width:max-content; }
-        .title{ font-size:16px; font-weight:800; margin:0; line-height:1.2; color:#fff; }
-        .meta{ font-size:13px; color:var(--muted); margin-top:4px; }
-
-        .actions{ margin-top:auto; display:flex; gap:10px; align-items:center; }
-        .btn{
-            display:inline-block;
-            text-decoration:none;
-            padding:10px 12px;
-            border-radius:10px;
-            font-weight:700;
-            text-align:center;
-            min-width:120px;
-        }
-        .btn-primary{ background:var(--accent); color:#fff; }
-        .btn-disabled{ background:var(--btn-disabled); color:#ddd; cursor:default; }
-
-        footer{ color:var(--muted); text-align:center; padding:18px 8px; font-size:13px; margin:28px 0 60px 0; border-top:1px solid #161616; }
-        /* small helpers */
-        .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+  <style amp-boilerplate>
+    body { visibility: hidden }
+  </style>
+  <noscript>
+    <style amp-boilerplate>
+      body { visibility: visible }
     </style>
+  </noscript>
+
+  <style amp-custom>
+    body {
+      font-family: 'Poppins', sans-serif;
+      color: #fff;
+    }
+    .caption {
+      font-size: 22px;
+      font-weight: 700;
+      text-shadow: 0px 0px 12px #000;
+      padding: 20px;
+    }
+  </style>
 </head>
+
 <body>
-<header class="site-header">Xizoa<span>Hub</span> Stories</header>
 
-<main class="wrap">
-    <section class="container" aria-label="XizoaHub Stories grid">
+<!-- ===============================
+     Yeh REAL STORY yaha se shuru hogi
+     Tum sirf is part ko replace karoge
+================================= -->
 
-        <!-- Story 1 – Active (unchanged as requested) -->
-        <article class="card" aria-labelledby="story-1-title">
-            <a href="earbuds-story.html" title="Best Earbuds under ₹1000" style="color:inherit;text-decoration:none;">
-                <div class="media" aria-hidden="true">
-                    <img src="https://xizoa.com/assets/cover.jpg" alt="Best Earbuds under ₹1000 cover" loading="lazy">
-                </div>
-                <div class="content">
-                    <div class="tag">Gadgets</div>
-                    <h3 id="story-1-title" class="title">Best Earbuds under ₹1000 (Visual Story)</h3>
-                    <div class="meta">Duration: 00:45 • Visual guide</div>
-                    <div class="actions">
-                        <span class="btn btn-primary" role="button" aria-label="Watch Story">Watch Story ▶</span>
-                    </div>
-                </div>
-            </a>
-        </article>
+<amp-story standalone
+  title="Your Story Title"
+  publisher="XizoaHub"
+  publisher-logo-src="https://xizoa.com/logo.png"
+  poster-portrait-src="IMAGE1">
 
-        <!-- Story 2 – Coming Soon -->
-        <article class="card" aria-labelledby="story-2-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Mobiles</div>
-                <h3 id="story-2-title" class="title">Best Smartphones under ₹15000 (2025)</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
+  <!-- PAGE 1 (replace or delete) -->
+  <amp-story-page id="page1">
+    <amp-story-grid-layer template="fill">
+      <amp-img src="IMAGE1" width="720" height="1280" layout="responsive"
+        animate-in="fade-in"></amp-img>
+    </amp-story-grid-layer>
 
-        <!-- Story 3 – Coming Soon -->
-        <article class="card" aria-labelledby="story-3-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Gaming</div>
-                <h3 id="story-3-title" class="title">Top 5 Gaming Phones under ₹20000</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
+    <amp-story-grid-layer template="vertical">
+      <div class="caption" animate-in="fly-in-left">
+        Your Page 1 Text
+      </div>
+    </amp-story-grid-layer>
+  </amp-story-page>
 
-        <!-- Story 4 – Coming Soon -->
-        <article class="card" aria-labelledby="story-4-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Tech News</div>
-                <h3 id="story-4-title" class="title">Top Tech News Highlights (2025)</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
+  <!-- PAGE 2 -->
+  <amp-story-page id="page2">
+    <amp-story-grid-layer template="fill">
+      <amp-img src="IMAGE2" width="720" height="1280" layout="responsive"
+        animate-in="fade-in"></amp-img>
+    </amp-story-grid-layer>
 
-        <!-- Story 5 – Coming Soon -->
-        <article class="card" aria-labelledby="story-5-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Life</div>
-                <h3 id="story-5-title" class="title">Productivity Hacks: 60-Second Tips</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
+    <amp-story-grid-layer template="vertical">
+      <div class="caption" animate-in="fly-in-right">
+        Your Page 2 Text
+      </div>
+    </amp-story-grid-layer>
+  </amp-story-page>
 
-        <!-- Story 6 – Coming Soon -->
-        <article class="card" aria-labelledby="story-6-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Tutorial</div>
-                <h3 id="story-6-title" class="title">Quick Camera Tips for Phone Photographers</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
+</amp-story>
 
-        <!-- Story 7 – Coming Soon -->
-        <article class="card" aria-labelledby="story-7-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Entertainment</div>
-                <h3 id="story-7-title" class="title">Top Trending Shows: Bite-Sized Picks</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
+<!-- ===============================
+     Bas yahi file tum edit karoge.
+================================= -->
 
-        <!-- Story 8 – Coming Soon -->
-        <article class="card" aria-labelledby="story-8-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">How-To</div>
-                <h3 id="story-8-title" class="title">Make a Simple Budget in 60s</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
-
-        <!-- Story 9 – Coming Soon -->
-        <article class="card" aria-labelledby="story-9-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Music</div>
-                <h3 id="story-9-title" class="title">Top Guitar Riffs You Should Know</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
-
-        <!-- Story 10 – Coming Soon -->
-        <article class="card" aria-labelledby="story-10-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Deals</div>
-                <h3 id="story-10-title" class="title">Weekly Deals Roundup</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
-
-    </section>
-</main>
-
-<footer>© <span id="year">2025</span> XizoaHub • Web Stories Platform</footer>
-
-<script>
-    // Small progressive enhancement: set current year, avoid broken image icon flashing
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Prevent focus outline removal for keyboard users — keep accessibility
-    (function(){document.addEventListener('keydown', function(e){if(e.key==='Tab') document.documentElement.classList.add('show-focus');});})();
-
-    // If you later create a new file for a story, replace href for the active card (earbuds-story.html)
-    // or update the "href" attributes set to "11111111" when you have the real URL/name.
-</script>
 </body>
 </html>
