--- a/index.html
+++ b/index.html
@@ -107,20 +107,36 @@
             </a>
         </article>
 
-        <!-- Story 2 – Coming Soon -->
-        <article class="card" aria-labelledby="story-2-title">
-            <div class="media" aria-hidden="true">
-                <img src="0000000000" alt="Coming Soon" loading="lazy" onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
-            </div>
-            <div class="content">
-                <div class="tag">Mobiles</div>
-                <h3 id="story-2-title" class="title">Best Smartphones under ₹15000 (2025)</h3>
-                <div class="meta">Slot reserved • Publish: Coming Soon</div>
-                <div class="actions">
-                    <a class="btn btn-disabled" href="11111111" aria-disabled="true" onclick="return false;">Coming Soon</a>
-                </div>
-            </div>
-        </article>
+        <!-- Story – YouTube Thumbnail Web Story -->
+<article class="card" aria-labelledby="story-yt-thumb-title">
+    <div class="media" aria-hidden="true">
+        <!-- TODO: yahan apna real cover image laga dena -->
+        <img src="https://xizoa.com/favicon.ico"
+             alt="Download YouTube Thumbnails Web Story"
+             loading="lazy"
+             onerror="this.style.background='#111';this.style.objectFit='contain';this.alt='Image placeholder';">
+    </div>
+
+    <div class="content">
+        <div class="tag">YouTube Tools</div>
+
+        <h3 id="story-yt-thumb-title" class="title">
+            Download Any YouTube Thumbnail in 1 Tap
+        </h3>
+
+        <div class="meta">
+            Web Story • HD / 4K Thumbnail Saver
+        </div>
+
+        <div class="actions">
+            <a class="btn"
+               href="/stories/yt-thumbnail-story"
+               aria-label="Open Web Story: Download Any YouTube Thumbnail in 1 Tap">
+               View Web Story
+            </a>
+        </div>
+    </div>
+</article>
 
         <!-- Story 3 – Coming Soon -->
         <article class="card" aria-labelledby="story-3-title">
